# sirix

./: .all-contributorsrc  .editorconfig  .gitattributes  .gitignore  .travis.deploy.artifacts.sh  .travis.maven.settings.xml  .travis.yml  ADDITIONAL_PERFORMANCE_ISSUES.md  AGENTS.md  ALLOCATOR_FIX_SUMMARY.md  ARENA_MEMORY_LEAK_FIX.md  BUFFER_MANAGER_CONFIGURATION.md  BUFFER_PIN_FIX_SUMMARY.md  BUG_ANALYSIS_CHILD_COUNT.md  BYPASS_EXPLANATION_SIMPLE.md  BYPASS_REMOVAL_ROOT_CAUSE_FOUND.md  BYPASS_REMOVAL_TEST_RESULTS.md  BYPASS_REQUIREMENT_EXPLAINED.md  BYPASS_VS_CACHE_COMPARISON.md  CHANGELOG.md  CI_READINESS_CHECKLIST.md  CLAUDE.md  CLOCKSWEEPER_RACE_FIX.md  CODE_OF_CONDUCT.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_INVESTIGATION_SUMMARY.md  COMPLETE_MEMORY_LEAK_FIX.md  COMPLETE_PERFORMANCE_OPTIMIZATION_SUMMARY.md  COMPLETE_SIGSEGV_FIX.md  COMPREHENSIVE_FIX_SUMMARY.md  CONTRIBUTING.md  CRASH_ANALYSIS.md  CURRENT_STATE.md  CURRENT_STATE_AND_NEXT_STEPS.md  DIAGNOSTIC_APPROACH.md  DIAGNOSTIC_FINDINGS_SUMMARY.md  DIAGNOSTIC_INSTRUCTIONS.md  DIAGNOSTIC_INVESTIGATION_FINAL.md  DIAGNOSTIC_INVESTIGATION_SUMMARY.md  Dockerfile  (+158 more)
sirix-storage-engine-rust/: Cargo.toml
sirix-storage-engine-rust/src/: constants.rs  error.rs  lib.rs  types.rs
sirix-storage-engine-rust/src/cache/: buffer_pool.rs  mod.rs  page_cache.rs  page_guard.rs  transaction_intent_log.rs
sirix-storage-engine-rust/src/compression/: mod.rs
sirix-storage-engine-rust/src/io/: file_channel.rs  mmap.rs  mod.rs  (+2 more)
sirix-storage-engine-rust/tests/: integration_end_to_end.rs  integration_io.rs  integration_versioning.rs
(+5733 files in other folders)
